# AlSkia

./: CMakeLists.txt  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/alimin/skia/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Test.cpp
app/src/main/java/com/alimin/skia/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/alimin/skia/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
src/: CMakeLists.txt
src/skia/cmake/: CMakeLists.ext  CMakeLists.txt  args.gn  build.ninja.d  toolchain.ninja
src/skia/src/core/: SkVM.cpp
